tests/baselines/reference/genericTypeAssertions4.errors.txt
tests/cases/compiler/genericTypeAssertions4.ts(19,5): error TS2322: Type 'A' is not assignable to type 'T'.
  'A' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions4.ts(20,5): error TS2322: Type 'B' is not assignable to type 'T'.
  'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions4.ts(21,5): error TS2322: Type 'C' is not assignable to type 'T'.
  'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions4.ts(23,9): error TS2352: Conversion of type 'B' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'B' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.
tests/cases/compiler/genericTypeAssertions4.ts(24,9): error TS2352: Conversion of type 'C' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  'C' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'A'.


==== tests/cases/compiler/genericTypeAssertions4.ts (5 errors) ====
    class A {
        foo() { return ""; }
    }
    
    class B extends A {
        bar() { return 1; }
    }
    
    class C extends A {
        baz() { return 1; }
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! error TS2322: Type '{|A|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|A|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|A|5|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions4.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions4.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 5 tests/cases/compiler/genericTypeAssertions4.ts:1:7
        y = b; // error: cannot convert B to T
        ~
!!! error TS2322: Type '{|B|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|B|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|A|5|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions4.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions4.ts:5:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 5 tests/cases/compiler/genericTypeAssertions4.ts:1:7
        y = c; // error: cannot convert C to T
        ~
!!! error TS2322: Type '{|C|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   '{|C|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|A|5|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions4.ts:9:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions4.ts:9:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 5 tests/cases/compiler/genericTypeAssertions4.ts:1:7
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! error TS2352: Conversion of type '{|B|0|}' to type '{|T|1|}' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   '{|B|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|A|5|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions4.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions4.ts:5:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 5 tests/cases/compiler/genericTypeAssertions4.ts:1:7
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! error TS2352: Conversion of type '{|C|0|}' to type '{|T|1|}' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   '{|C|2|}' is assignable to the constraint of type '{|T|3|}', but '{|T|4|}' could be instantiated with a different subtype of constraint '{|A|5|}'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions4.ts:9:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions4.ts:9:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 4 tests/cases/compiler/genericTypeAssertions4.ts:17:15
!!! annotated symbol 5 tests/cases/compiler/genericTypeAssertions4.ts:1:7
    }